# a_tracer

./: Cargo.toml  LICENSE.md  README.md
a_tracing_lib/: Cargo.toml
a_tracing_lib/src/: color.rs  lib.rs  ray.rs  sampling.rs  scene.rs  tracer.rs
a_tracing_lib/src/scene/: camera.rs  object.rs  sphere.rs
a_tracing_lib/src/scene/light/: ambient_light.rs  directional_light.rs  mod.rs
a_tracing_window/: Cargo.toml
a_tracing_window/src/: gui.rs  main.rs
tracing_lib/: Cargo.toml
