[package]
name = "a_tracing_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
winit_input_helper = "0.14"
egui = "0.22"
egui-wgpu = "0.22"
egui-winit = { version = "0.22", default-features = false }
pixels = "0.13"
log = "0.4"
env_logger = "0.10"
